2008-07-08  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/page-wireless.c
		- (populate_ui): ensure changes update the connection on-the-fly

2008-07-08  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/nm-connection-editor.c
	  src/connection-editor/nm-connection-editor.h
	  src/connection-editor/ce-page.c
	  src/connection-editor/ce-page.h
		- Move ce_spin_output_with_default() and ce_get_property_default() to
			ce-page.c

2008-07-08  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
	  src/applet.h
		- (nma_context_menu_create): remember signal IDs
		- (nma_context_menu_update): block emission of 'toggled' handlers so
			they don't get called when updating the checkitems' status

2008-07-08  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/page-ip4.c
		- (method_changed): disable manual configuration elements when AutoIP
			is selected too

2008-07-07  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/page-ip4.c
	  src/applet-dialogs.c
		- Update for change from netmask -> prefix (requires NM svn3812 or later)

2008-07-03  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/ce-page-ip4.glade
	  src/connection-editor/page-ip4.c
		- Add entry for DHCP Client ID

2008-07-03  Dan Williams  <dcbw@redhat.com>

	* src/vpn-password-dialog.c
	  src/Makefile.am
		- (find_auth_dialog_binary): expect VPN auth dialog to be in $LIBEXECDIR

2008-07-03  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/vpn-helpers.c
	  src/connection-editor/Makefile.am
		- (vpn_get_plugins): expect VPN GUI plugins to be in $LIBDIR

2008-07-02  Tambet Ingo  <tambet@gmail.com>

	Patch from André Lemos <alemos@criticalsoftware.com>

	* src/gconf-helpers/nma-gconf-settings.c 
	(nma_gconf_settings_add_connection):
	* src/connection-editor/nm-connection-list.c (show_error_dialog):
	* src/applet.c (applet_settings_new_secrets_requested_cb): 
	* src/applet-device-wired.c (get_pppoe_secrets_cb)
	(get_8021x_secrets_cb): 